# rf

./: .gitignore  GEMINI.md  GEMINI.request.md  GEMINI.web.md  db-sync-alembic.bat  db-sync-alembic.sh  db-sync-master.bat  db-sync-master.sh  db-sync-prisma.bat  db-sync-prisma.sh  db-sync.bat  db-sync.sh  docker-compose.yml  run_all.bat  run_backend.bat  run_web_debug.bat  setup_db.bat  web-migrate.bat  요구사항.txt  요구사항.의뢰상세.txt  요구사항_web.txt
rfgo-embedding-worker/: .env  .env.prod  backfill_embeddings.py  main.py  pyproject.toml
rfgo-embedding-worker/app/: config.py  main.py  models.py
rfgo-embedding-worker/app/core/: config.py
rfgo-embedding-worker/app/infrastructure/providers/: __init__.py  openai.py
rfgo-embedding-worker/app/providers/: __init__.py  base.py  openai.py
rfgo-rag-backend/: .env  .env.dev  .env.prod  main.py  pyproject.toml
rfgo-rag-backend/app/: config.py  main.py  models.py  vector_store.py
rfgo-rag-backend/app/api/: mcp_tools.py
rfgo-rag-backend/app/api/endpoints/: chat.py  search.py
rfgo-rag-backend/app/application/services/: chat_service.py  search_service.py
rfgo-rag-backend/app/core/: config.py
rfgo-rag-backend/app/domain/models/: models.py
rfgo-rag-backend/app/domain/schemas/: search.py
rfgo-rag-backend/app/infrastructure/: database.py  vector_store.py
rfgo-vsto-fastapi/: .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
rfgo-vsto-fastapi/.github/workflows/: build-deploy.yml
rfgo-vsto-fastapi/app/: main.py
rfgo-vsto-fastapi/app/api/endpoints/: auth.py  (+3 more)
rfgo-vsto-fastapi/app/core/: config.py  security.py
rfgo-vsto-fastapi/migrations/: env.py
rfgo-vsto-fastapi/migrations/versions/: 03c8e740f2c7_initial_tables.py  92e9f852a17c_sync_from_prisma.py  c26f1ff371d0_auto_migration.py
(+489 files in other folders)
