[project]
name = "rfgo-rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp[cli]>=3.2.0",
    "langgraph>=1.1.4",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]
